--- a/doc/latex/mkgentoo_8sh.tex
+++ b/doc/latex/mkgentoo_8sh.tex
@@ -44,15 +44,15 @@ Upgrade it with virtualbox guest additions. \end{DoxyCompactList}\item
 \mbox{\hyperlink{group__create_installer_gaa20a26022083ddbb29df1a6ea3791e0e}{clone\+\_\+vm\+\_\+to\+\_\+raw}} ()
 \begin{DoxyCompactList}\small\item\em Use. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga86464f142e32909fb7bd94e35fd2d171}{dd\+\_\+to\+\_\+usb}} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Bare-\/metal copy of temporary R\+AW disk to external device. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gaf8725880181e1189e31629b07163aaa4}{clonezilla\+\_\+device\+\_\+to\+\_\+image}} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Create Clone\+Zilla xz-\/compressed image out of an external block device (like a U\+SB stick) \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga1eee61abdc54f97375ce8ccb16e1e6aa}{vbox\+\_\+img\+\_\+works}} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Test if {\bfseries{vbox-\/img}} is functional. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gafcb910ff0a49712375eabe0631b4dcdd}{create\+\_\+usb\+\_\+system}} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Clone V\+DI virtual disk to external device (like a U\+SB stick) \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gaff07c1d29d6d6a540c726948254a1764}{cleanup}} ()
-\item 
+\begin{DoxyCompactList}\small\item\em Clean up all temporary files and directpries (except for Virtual\+Box build) \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga4a96ee0336af9e52512585ceec9ca3a4}{generate\+\_\+\+Gentoo}} ()
 \begin{DoxyCompactList}\small\item\em Launch routines\+: fetch install I\+SO, starge3 archive, create VM. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga51af30a60f9f02777c6396b8247e356f}{main}} ()
@@ -133,5 +133,5 @@ you should have at least 55 GB of free disk space in the current directory or in
 
 
 
-Definition at line 515 of file mkgentoo.\+sh.
+Definition at line 519 of file mkgentoo.\+sh.
 
