--- a/doc/man/man3/utils.sh.3
+++ b/doc/man/man3/utils.sh.3
@@ -1,4 +1,4 @@
-.TH "utils.sh" 3 "Mon Sep 28 2020" "Version 1.0" "mkgentoo" \" -*- nroff -*-
+.TH "utils.sh" 3 "Tue Sep 29 2020" "Version 1.0" "mkgentoo" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -38,6 +38,10 @@ utils.sh \- Auxiliary functions\&.
 .RI "\fBburn_iso\fP ()"
 .br
 .RI "Burn Gentoo clonezilla installer to DVD using \fBcdrecord\fP\&. "
+.ti -1c
+.RI "\fBcreate_install_usb_device\fP ()"
+.br
+.RI "Create USB-stick (or any external device) Gentoo clonezilla installer\&. "
 .in -1c
 .SH "Detailed Description"
 .PP 
