--- a/doc/man/man3/build_virtualbox.sh.3
+++ b/doc/man/man3/build_virtualbox.sh.3
@@ -1,4 +1,4 @@
-.TH "build_virtualbox.sh" 3 "Tue Sep 29 2020" "Version 1.0" "mkgentoo" \" -*- nroff -*-
+.TH "build_virtualbox.sh" 3 "Wed Sep 30 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -28,4 +28,4 @@ Definition at line 3 of file build_virtualbox\&.sh\&.
 Definition at line 2 of file build_virtualbox\&.sh\&.
 .SH "Author"
 .PP 
-Generated automatically by Doxygen for mkgentoo from the source code\&.
+Generated automatically by Doxygen for gentoo-creator from the source code\&.
