--- a/doc/man/man3/mkvm.sh.3
+++ b/doc/man/man3/mkvm.sh.3
@@ -1,4 +1,4 @@
-.TH "mkvm.sh" 3 "Tue Sep 29 2020" "Version 1.0" "mkgentoo" \" -*- nroff -*-
+.TH "mkvm.sh" 3 "Wed Sep 30 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -27,4 +27,4 @@ mkvm.sh
 .in -1c
 .SH "Author"
 .PP 
-Generated automatically by Doxygen for mkgentoo from the source code\&.
+Generated automatically by Doxygen for gentoo-creator from the source code\&.
