--- a/doc/man/man3/todo.3
+++ b/doc/man/man3/todo.3
@@ -1,4 +1,4 @@
-.TH "todo" 3 "Tue Sep 29 2020" "Version 1.0" "mkgentoo" \" -*- nroff -*-
+.TH "todo" 3 "Wed Sep 30 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
