--- a/doc/man/man3/utils.sh.3
+++ b/doc/man/man3/utils.sh.3
@@ -1,4 +1,4 @@
-.TH "utils.sh" 3 "Tue Sep 29 2020" "Version 1.0" "mkgentoo" \" -*- nroff -*-
+.TH "utils.sh" 3 "Wed Sep 30 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -69,4 +69,4 @@ This file is not included into the clonezilla ISO liveCD\&.
 Definition in file \fButils\&.sh\fP\&.
 .SH "Author"
 .PP 
-Generated automatically by Doxygen for mkgentoo from the source code\&.
+Generated automatically by Doxygen for gentoo-creator from the source code\&.
