--- a/doc/man/man3/auxiliaryFunctions.3
+++ b/doc/man/man3/auxiliaryFunctions.3
@@ -1,4 +1,4 @@
-.TH "auxiliaryFunctions" 3 "Tue Sep 29 2020" "Version 1.0" "mkgentoo" \" -*- nroff -*-
+.TH "auxiliaryFunctions" 3 "Wed Sep 30 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -144,4 +144,4 @@ chown root cdrecord && chgrp bin cdrecord && chmod 04755 cdrecord
 Definition at line 110 of file utils\&.sh\&.
 .SH "Author"
 .PP 
-Generated automatically by Doxygen for mkgentoo from the source code\&.
+Generated automatically by Doxygen for gentoo-creator from the source code\&.
