--- a/doc/man/man3/mkFileSystem.3
+++ b/doc/man/man3/mkFileSystem.3
@@ -1,4 +1,4 @@
-.TH "mkFileSystem" 3 "Tue Sep 29 2020" "Version 1.0" "mkgentoo" \" -*- nroff -*-
+.TH "mkFileSystem" 3 "Wed Sep 30 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -114,7 +114,7 @@ Write zeros as much as possible to prepare for compacting\&.
 .PP
 
 .PP
-Definition at line 171 of file mkvm\&.sh\&.
+Definition at line 226 of file mkvm\&.sh\&.
 .SS "global_config ()"
 
 .PD 0
@@ -191,7 +191,7 @@ On success, create empty file \fBpartition\fP
 .PP
 
 .PP
-Definition at line 94 of file mkvm\&.sh\&.
+Definition at line 135 of file mkvm\&.sh\&.
 .SS "partition ()"
 
 .PP
@@ -201,7 +201,24 @@ Create partition table, \fB/dev/sda1\fP (bios_grub), \fB/dev/sda2\fP (boot), \fB
 .br
  On success, just create empty file\&. 
 .PP
-Definition at line 52 of file mkvm\&.sh\&.
+\fBWarning\fP
+.RS 4
+The VM needs time to recognize /dev/sda in some cases, for unclear reasons\&. This may be a kernel issue or a VirtualBox issue\&. 
+.RE
+.PP
+\fBBug\fP
+.RS 4
+Same issue with mkswap and swapon\&. Syncing and a bit of sleep fixed these issues\&. 
+.RE
+.PP
+\fBNote\fP
+.RS 4
+It might be necessary with older machines to increase the amount of sleep\&. 
+.RE
+.PP
+
+.PP
+Definition at line 70 of file mkvm\&.sh\&.
 .SS "setup_network ()"
 
 .PP
@@ -217,4 +234,4 @@ Call net-setup and dhcpcd to enable networking\&. Create file \fBsetup_network\f
 Definition at line 27 of file mkvm\&.sh\&.
 .SH "Author"
 .PP 
-Generated automatically by Doxygen for mkgentoo from the source code\&.
+Generated automatically by Doxygen for gentoo-creator from the source code\&.
