--- a/doc/man/man3/mkvm_chroot.sh.3
+++ b/doc/man/man3/mkvm_chroot.sh.3
@@ -1,4 +1,4 @@
-.TH "mkvm_chroot.sh" 3 "Tue Sep 29 2020" "Version 1.0" "mkgentoo" \" -*- nroff -*-
+.TH "mkvm_chroot.sh" 3 "Wed Sep 30 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -55,7 +55,7 @@ Definition in file \fBmkvm_chroot\&.sh\fP\&.
 .SS "finalize ()"
 
 .PP
-Definition at line 343 of file mkvm_chroot\&.sh\&.
+Definition at line 353 of file mkvm_chroot\&.sh\&.
 .SH "Author"
 .PP 
-Generated automatically by Doxygen for mkgentoo from the source code\&.
+Generated automatically by Doxygen for gentoo-creator from the source code\&.
