--- a/doc/man/man3/createInstaller.3
+++ b/doc/man/man3/createInstaller.3
@@ -257,7 +257,7 @@ Wait for the VM to complete its task\&. Check that it is still running every min
 .br
 \fBNote\fP
 .RS 4
-VM may be visible (vmtype=gui) or silent (vmtype=headless, default)\&. Wait for the VM to complete task\&. 
+VM may be visible (vmtype=gui) or silent (vmtype=headless, currently to be fixed)\&. Wait for the VM to complete task\&. 
 .br
 A new VM is necessary as the first VM used to build the Gentoo filesystem does not contain clonezilla or the VirtualBox guest additions (requested for sharing folders with host)\&. Calls \fBprocess_clonezilla_iso\fP to satisfy these requirements\&. 
 .RE
@@ -298,7 +298,7 @@ Finally compact it\&.
 .PP
 \fBNote\fP
 .RS 4
-VM may be visible (vmtype=gui) or silent (vmtype=headless, default) 
+VM may be visible (vmtype=gui) or without GUI (vmtype=headless, currently to be fixed) 
 .RE
 .PP
 \fBTodo\fP
